markdown styles: fixed extra bottom spacing with chatbot and changelog

--- a/packages/frontend/app/globals.css
+++ b/packages/frontend/app/globals.css
@@ -307,8 +307,10 @@ It is used for displaying markdown nicely inside any <Markdown> components
   margin-left: 1.5em;
 }
 .childrenMarkdownFormatted p {
-  margin-bottom: 0.5em;
   margin-bottom: 0.75em;
+}
+.childrenMarkdownFormatted li p, .childrenMarkdownFormatted p:last-child {
+  margin-bottom: 0; 
 }
 .childrenMarkdownFormatted h1 {
   font-size: 1.5em;
